Make client modules JDK 11 compatible
Convert Java 14+ features to JDK 11 compatible code in the following modules:
- dazzleduck-sql-client
- dazzleduck-sql-common
- dazzleduck-sql-logger
- dazzleduck-sql-client-grpc
- dazzleduck-sql-logback

Changes:
- Convert record classes to regular classes with accessor methods
- Add Jackson annotations (@JsonCreator, @JsonProperty) where needed
- Fix pattern matching instanceof to traditional instanceof with cast
- Convert switch expressions to traditional switch statements
- Remove add(Record) method from ArrowProducer (uses Java 14+ Record class)
- Update pom.xml files to use Java 11 source/target

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>